added a neat tool tip for previous/next division

--- a/TournamentTreeApp/Content/Site.css
+++ b/TournamentTreeApp/Content/Site.css
@@ -22,3 +22,36 @@ select,
 textarea {
     max-width: 280px;
 }
+a {
+/*  color: #900;*/
+  text-decoration: none;
+}
+
+
+a:hover {
+  color: red;
+  position: relative;
+}
+
+a[altdata]:hover:after {
+  content: attr(altdata);
+  padding: 4px 8px;
+  color: #333;
+  position: absolute;
+  left: 5px;
+  top: 100%;
+  white-space: nowrap;
+  z-index: 20;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  opacity: 0.8;
+  -moz-box-shadow: 0px 0px 4px #222;
+  -webkit-box-shadow: 0px 0px 4px #222;
+  box-shadow: 0px 0px 4px #222;
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);  
+  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+}
