Added ability to transfer users between divisions

--- a/TournamentTreeApp/Views/Divisions/Details.cshtml
+++ b/TournamentTreeApp/Views/Divisions/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TournamentModels.Division
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details";    
 }
 <hr />
 <div>
@@ -9,9 +9,9 @@
     <h4>Division</h4>
     <hr />
     @*<p><a href="~/Divisions/Edit/@Model.DivisionId" style="float:left;margin-right:10px">Edit</a></p>
-    <p><a href="~/Divisions/Delete/@Model.DivisionId">Delete</a></p>
+        <p><a href="~/Divisions/Delete/@Model.DivisionId">Delete</a></p>
 
-    <hr />*@
+        <hr />*@
     <dl class="dl-horizontal">
         @*<dt>
                 @Html.DisplayNameFor(model => model.Id)
@@ -44,7 +44,7 @@
         <dd>
             @Html.DisplayFor(model => model.DrawBracket)
         </dd>
-        
+
         <dd>
             @Html.DisplayFor(model => model.ConsolidationRound)
         </dd>
@@ -108,6 +108,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th></th>
+            <th>Transfer to division...</th>            
         </tr>
 
         @foreach (var item in Model.ParticipantDivisionInts)
@@ -127,9 +128,28 @@
                     @*@Html.ActionLink("Details", "Details", "ParticipantDivisionInts", new { id = item.ParticipantDivisionIntId }, null) |*@
                     @Html.ActionLink("Remove from division..", "Delete", "ParticipantDivisionInts", new { id = item.ParticipantDivisionIntId }, null)
                 </td>
+                <td>
+                    <select name="trans" class="target">
+                        @foreach (var pair in ((Dictionary<Guid, List<SelectListItem>>)Model.LinkHelper)[item.Participant.ParticipantId])
+                        {
+                            <option value="@pair.Value">@pair.Text</option>
+                        }
+                    </select>
+                </td>
             </tr>
         }
 
     </table>
+    <script>
+        $(".target").change(function () {
+            if (this.value != null && this.value != "")
+                if (confirm("Are you sure?")) {
+                    window.location.href = this.value;
+                }
+                else {
+                    this.selectedIndex = 0;
+                }
+    });
+    </script>
 
 </div>
