--- a/TournamentTreeApp/Views/Divisions/Details.cshtml
+++ b/TournamentTreeApp/Views/Divisions/Details.cshtml
@@ -44,8 +44,10 @@
         <dd>
             @Html.DisplayFor(model => model.DrawBracket)
         </dd>
-
-        <dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ConsolidationRound)
+        </dt>
+        <dd>                       
             @Html.DisplayFor(model => model.ConsolidationRound)
         </dd>
 
@@ -66,7 +68,7 @@
             </dd>*@
 
         <dt>
-            @Html.DisplayNameFor(model => model.Tournament.Name)
+            @Html.DisplayNameFor(model => model.Tournament)
         </dt>
 
         <dd>
