Added fast lane for adding a participant to a division

--- a/TournamentTreeApp/Views/Divisions/Details.cshtml
+++ b/TournamentTreeApp/Views/Divisions/Details.cshtml
@@ -98,6 +98,9 @@
     <p>
         @Html.ActionLink(">> Add participant", "CreateForDivision", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
     </p>
+    <p>
+        @Html.ActionLink(">> Add new participant", "CreateForDivisionFast", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
+    </p>
     <table class="table">
         <tr>
             @*<th>
