Various changes - mostly cosmetical

--- a/TournamentTreeApp/Views/Divisions/Details.cshtml
+++ b/TournamentTreeApp/Views/Divisions/Details.cshtml
@@ -96,10 +96,10 @@
 <div>
 
     <p>
-        @Html.ActionLink(">> Add participant", "CreateForDivision", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
+        @Html.ActionLink(">> Add competitor", "CreateForDivision", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
     </p>
     <p>
-        @Html.ActionLink(">> Add new participant", "CreateForDivisionFast", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
+        @Html.ActionLink(">> Add new competitor", "CreateForDivisionFast", "ParticipantDivisionInts", new { divisionId = Model.DivisionId, tournamentId = Model.TournamentId }, null)
     </p>
     <table class="table">
         <tr>
