--- a/TournamentTreeApp/Views/ParticipantDivisionInts/Create.cshtml
+++ b/TournamentTreeApp/Views/ParticipantDivisionInts/Create.cshtml
@@ -9,7 +9,7 @@
     visibility: hidden;  }
 </style>
 
-<h2>Add participant to division</h2>
+<h2>Add competitor to division</h2>
 
 @using (Html.BeginForm()) 
 {
