--- a/TournamentTreeApp/Views/Participants/Create.cshtml
+++ b/TournamentTreeApp/Views/Participants/Create.cshtml
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Participant</h4>
+        <h4>Competitor</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
