--- a/TournamentTreeApp/Views/Shared/_Layout.cshtml
+++ b/TournamentTreeApp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Tournament-Trees.com", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Tournament-Trees.com v1.1", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
