--- a/IdentityManager/Views/Shared/_Layout.cshtml
+++ b/IdentityManager/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Tournament-Trees.com - Identity Manager", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Tournament-Trees.com v1.1 - Identity Manager", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
