--- a/TournamentTreeApp/Views/ParticipantDivisionInts/Delete.cshtml
+++ b/TournamentTreeApp/Views/ParticipantDivisionInts/Delete.cshtml
@@ -6,7 +6,7 @@
 
 @*<h2>Delete</h2>*@
 
-<h3>Are you sure you want to remove this participant from the division?</h3>
+<h3>Are you sure you want to remove this competitor from the division?</h3>
 <div>
 @*    <h4>ParticipantDivisionInt</h4>*@
     <hr />
