--- a/TournamentTreeApp/Views/Participants/Details.cshtml
+++ b/TournamentTreeApp/Views/Participants/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Participant</h4>
+    <h4>Competitor</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
