Added default consolidation round to tournament import.

--- a/TournamentTreeApp/Views/Import/Index.cshtml
+++ b/TournamentTreeApp/Views/Import/Index.cshtml
@@ -38,6 +38,11 @@
                 </li>
                 <hr />
                 <li>
+                    <label>Default Consolidation round value</label>
+                    <input type="checkbox" id="defConsolidation" name="defConsolidation">
+                </li>
+                <hr />
+                <li>
                     <input type="submit" value="Upload" id="ajaxUploadButton" class="btn">
                 </li>
             </ol>
