--- a/TournamentTreeApp/Views/ParticipantDivisionInts/Create.cshtml
+++ b/TournamentTreeApp/Views/ParticipantDivisionInts/Create.cshtml
@@ -20,7 +20,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ParticipantId, "ParticipantId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ParticipantId, "Competitor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ParticipantId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ParticipantId, "", new { @class = "text-danger" })
